kube/ingress-gitea-http copy 2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitea-http
  namespace: tmp
spec:
  ingressClassName: nginx
  rules:
  - host: gitea.localdev.me
    http:
      paths:
      - backend:
          service:
            name: gitea-http
            port:
              number: 3000
        pathType: Prefix
        path: /
